--- a/index.html
+++ b/index.html
@@ -1,164 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dark To-Do List</title>
-  <style>
-    /* Base styles */
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #121212;
-      color: #e0e0e0;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      min-height: 100vh;
-      padding: 50px 20px;
-      margin: 0;
-    }
-
-    .container {
-      background: #1e1e1e;
-      padding: 30px 40px;
-      border-radius: 12px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.7);
-      width: 100%;
-      max-width: 400px;
-    }
-
-    h1 {
-      text-align: center;
-      color: #fff;
-      margin-bottom: 20px;
-    }
-
-    .input-group {
-      display: flex;
-      margin-bottom: 20px;
-    }
-
-    input[type="text"] {
-      flex: 1;
-      padding: 10px 15px;
-      border: 2px solid #333;
-      border-radius: 8px 0 0 8px;
-      font-size: 16px;
-      outline: none;
-      background: #2a2a2a;
-      color: #fff;
-      transition: border 0.2s;
-    }
-
-    input[type="text"]:focus {
-      border-color: #6c63ff;
-    }
-
-    button {
-      padding: 10px 20px;
-      border: none;
-      background: #6c63ff;
-      color: #fff;
-      font-weight: bold;
-      border-radius: 0 8px 8px 0;
-      cursor: pointer;
-      transition: background 0.2s;
-    }
-
-    button:hover {
-      background: #574fd6;
-    }
-
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    li {
-      background: #2a2a2a;
-      margin-bottom: 10px;
-      padding: 12px 15px;
-      border-radius: 8px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      transition: background 0.2s;
-      cursor: pointer;
-    }
-
-    li.completed {
-      text-decoration: line-through;
-      color: #888;
-    }
-
-    li:hover {
-      background: #3a3a3a;
-    }
-
-    li button {
-      background: #ff6b6b;
-      border-radius: 6px;
-      padding: 5px 10px;
-      font-size: 14px;
-      color: #fff;
-    }
-
-    li button:hover {
-      background: #e54e4e;
-    }
-
-  </style>
+  <title>Mini Project App</title>
 </head>
 <body>
-  <div class="container">
-    <h1>Dark To-Do List</h1>
-    <div class="input-group">
-      <input type="text" id="taskInput" placeholder="Add a new task..." />
-      <button id="addBtn">Add</button>
-    </div>
-    <ul id="taskList"></ul>
-  </div>
+  <h1>Mini Project Tracker</h1>
 
-  <script>
-    const taskInput = document.getElementById('taskInput');
-    const addBtn = document.getElementById('addBtn');
-    const taskList = document.getElementById('taskList');
+  <h2>Add User</h2>
+  <input id="userName" placeholder="Name">
+  <input id="userEmail" placeholder="Email">
+  <button onclick="addUser()">Add User</button>
 
-    function createTask(taskText) {
-      const li = document.createElement('li');
-      li.textContent = taskText;
+  <h2>Add Project</h2>
+  <input id="projectTitle" placeholder="Title">
+  <input id="projectDesc" placeholder="Description">
+  <select id="projectOwner"></select>
+  <button onclick="addProject()">Add Project</button>
 
-      // Complete task on click
-      li.addEventListener('click', () => {
-        li.classList.toggle('completed');
-      });
+  <h2>Projects</h2>
+  <ul id="projectList"></ul>
 
-      // Delete button
-      const deleteBtn = document.createElement('button');
-      deleteBtn.textContent = 'Delete';
-      deleteBtn.addEventListener('click', (e) => {
-        e.stopPropagation();
-        li.remove();
-      });
+<script>
+async function fetchUsers() {
+  const res = await fetch('/users');
+  const users = await res.json();
+  const select = document.getElementById('projectOwner');
+  select.innerHTML = '';
+  users.forEach(u => {
+    const opt = document.createElement('option');
+    opt.value = u._id;
+    opt.textContent = u.name;
+    select.appendChild(opt);
+  });
+}
 
-      li.appendChild(deleteBtn);
-      taskList.appendChild(li);
-    }
+async function fetchProjects() {
+  const res = await fetch('/projects');
+  const projects = await res.json();
+  const list = document.getElementById('projectList');
+  list.innerHTML = '';
+  projects.forEach(p => {
+    const li = document.createElement('li');
+    li.textContent = `${p.title} - ${p.description} (Owner: ${p.owner?.name || 'Unknown'})`;
+    list.appendChild(li);
+  });
+}
 
-    addBtn.addEventListener('click', () => {
-      const taskText = taskInput.value.trim();
-      if(taskText) {
-        createTask(taskText);
-        taskInput.value = '';
-        taskInput.focus();
-      }
-    });
+async function addUser() {
+  const name = document.getElementById('userName').value;
+  const email = document.getElementById('userEmail').value;
+  await fetch('/users', { method: 'POST', headers: {'Content-Type':'application/json'}, body: JSON.stringify({name,email}) });
+  document.getElementById('userName').value='';
+  document.getElementById('userEmail').value='';
+  fetchUsers();
+}
 
-    // Add task on Enter key
-    taskInput.addEventListener('keydown', (e) => {
-      if(e.key === 'Enter') addBtn.click();
-    });
-  </script>
+async function addProject() {
+  const title = document.getElementById('projectTitle').value;
+  const desc = document.getElementById('projectDesc').value;
+  const owner = document.getElementById('projectOwner').value;
+  await fetch('/projects', { method: 'POST', headers: {'Content-Type':'application/json'}, body: JSON.stringify({title,description:desc,owner}) });
+  document.getElementById('projectTitle').value='';
+  document.getElementById('projectDesc').value='';
+  fetchProjects();
+}
+
+fetchUsers();
+fetchProjects();
+</script>
 </body>
 </html>
